major comment and add validators